RESOLVED FIXED267089
Isolated iframes that crash during load should not delay load event of parent frame
https://bugs.webkit.org/show_bug.cgi?id=267089
Summary Isolated iframes that crash during load should not delay load event of parent...
Alex Christensen
Reported 2024-01-04 09:28:55 PST
...
Attachments
Alex Christensen
Comment 1 2024-01-04 09:46:27 PST
EWS
Comment 2 2024-01-04 13:01:01 PST
Committed 272656@main (fa35998e9caf): <https://commits.webkit.org/272656@main> Reviewed commits have been landed. Closing PR #22388 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-01-04 13:02:22 PST
Note You need to log in before you can comment on or make changes to this bug.