Source/WebCore/testing/Internals.cpp
@@ -6184,6 +6184,11 @@ void Internals::whenServiceWorkerIsTerminated(ServiceWorker& worker, DOMPromiseD
     });
 }
 
+NO_RETURN_DUE_TO_CRASH void Internals::terminateWebContentProcess()
+{
+    exit(0);
+}
+
 #if ENABLE(APPLE_PAY)
 MockPaymentCoordinator& Internals::mockPaymentCoordinator(Document& document)
 {
